<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp" >
    
    <!-- Authentication section -->

    <TextView
        android:id="@+id/textView2"
        style="@style/ListHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_connection_authentication_header"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/auth_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/auth_username_hint"
        android:inputType="textEmailAddress|textShortMessage"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/auth_password_hint"
        android:inputType="textPassword" />
    
    <!-- HTTPS section -->

    <TextView
        android:id="@+id/textView1"
        style="@style/ListHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pre_connection_security_header"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/https_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/use_https_text" />

</LinearLayout>